Correct error handling & delete response
