# internal/provider/flow_resource.go
@@ -17,7 +17,6 @@ import (
 	"github.com/hashicorp/terraform-plugin-framework/path"
 	"github.com/hashicorp/terraform-plugin-framework/resource"
 	"github.com/hashicorp/terraform-plugin-framework/resource/schema"
-	"github.com/hashicorp/terraform-plugin-framework/resource/schema/booldefault"
 	"github.com/hashicorp/terraform-plugin-framework/schema/validator"
 	"github.com/hashicorp/terraform-plugin-framework/types"
 	"github.com/hashicorp/terraform-plugin-framework/types/basetypes"
@@ -40,6 +39,7 @@ type FlowResource struct {
 type FlowResourceModel struct {
 	Actions           []types.String            `tfsdk:"actions"`
 	Conditions        []tfTypes.ActionCondition `tfsdk:"conditions"`
+	DisableDetails    *tfTypes.DisableDetails   `tfsdk:"disable_details"`
 	Enabled           types.Bool                `tfsdk:"enabled"`
 	EntitySchema      types.String              `tfsdk:"entity_schema"`
 	FlowName          types.String              `tfsdk:"flow_name"`
@@ -72,9 +72,6 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 				Computed: true,
 				Optional: true,
 				NestedObject: schema.NestedAttributeObject{
-					Validators: []validator.Object{
-						speakeasy_objectvalidators.NotNull(),
-					},
 					Attributes: map[string]schema.Attribute{
 						"evaluation_result": schema.BoolAttribute{
 							Computed:    true,
@@ -94,9 +91,6 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 							Computed: true,
 							Optional: true,
 							NestedObject: schema.NestedAttributeObject{
-								Validators: []validator.Object{
-									speakeasy_objectvalidators.NotNull(),
-								},
 								Attributes: map[string]schema.Attribute{
 									"id": schema.StringAttribute{
 										Computed: true,
@@ -224,11 +218,37 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 					},
 				},
 			},
+			"disable_details": schema.SingleNestedAttribute{
+				Computed: true,
+				Optional: true,
+				Attributes: map[string]schema.Attribute{
+					"disabled_at": schema.StringAttribute{
+						Computed:    true,
+						Optional:    true,
+						Description: `When the flow was disabled. Not Null`,
+						Validators: []validator.String{
+							speakeasy_stringvalidators.NotNull(),
+							validators.IsRFC3339(),
+						},
+					},
+					"disabled_by": schema.StringAttribute{
+						Computed:    true,
+						Optional:    true,
+						Description: `Who disabled the flow (system or user). Not Null; must be one of ["system", "user"]`,
+						Validators: []validator.String{
+							speakeasy_stringvalidators.NotNull(),
+							stringvalidator.OneOf(
+								"system",
+								"user",
+							),
+						},
+					},
+				},
+			},
 			"enabled": schema.BoolAttribute{
 				Computed:    true,
 				Optional:    true,
-				Default:     booldefault.StaticBool(true),
-				Description: `Whether the automation is enabled or not. Default: true`,
+				Description: `Whether the automation is enabled or not`,
 			},
 			"entity_schema": schema.StringAttribute{
 				Computed:    true,
@@ -252,9 +272,6 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 				Computed: true,
 				Optional: true,
 				NestedObject: schema.NestedAttributeObject{
-					Validators: []validator.Object{
-						speakeasy_objectvalidators.NotNull(),
-					},
 					Attributes: map[string]schema.Attribute{
 						"id": schema.StringAttribute{
 							Computed:    true,
@@ -365,9 +382,6 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 			"triggers": schema.ListNestedAttribute{
 				Required: true,
 				NestedObject: schema.NestedAttributeObject{
-					Validators: []validator.Object{
-						speakeasy_objectvalidators.NotNull(),
-					},
 					Attributes: map[string]schema.Attribute{
 						"any": schema.StringAttribute{
 							Computed:    true,
@@ -410,7 +424,7 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 								"type": schema.StringAttribute{
 									Computed:    true,
 									Optional:    true,
-									Description: `Not Null; must be "api_submission"`,
+									Description: `Not Null; must be one of ["api_submission"]`,
 									Validators: []validator.String{
 										speakeasy_stringvalidators.NotNull(),
 										stringvalidator.OneOf(
@@ -456,7 +470,7 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 								"type": schema.StringAttribute{
 									Computed:    true,
 									Optional:    true,
-									Description: `Not Null; must be "entity_manual"`,
+									Description: `Not Null; must be one of ["entity_manual"]`,
 									Validators: []validator.String{
 										speakeasy_stringvalidators.NotNull(),
 										stringvalidator.OneOf(
@@ -521,10 +535,21 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 															Computed: true,
 															Optional: true,
 															NestedObject: schema.NestedAttributeObject{
-																Validators: []validator.Object{
-																	speakeasy_objectvalidators.NotNull(),
-																},
 																Attributes: map[string]schema.Attribute{
+																	"str": schema.StringAttribute{
+																		Computed: true,
+																		Optional: true,
+																		Validators: []validator.String{
+																			stringvalidator.ConflictsWith(path.Expressions{
+																				path.MatchRelative().AtParent().AtName("anything_but_condition"),
+																				path.MatchRelative().AtParent().AtName("equals_ignore_case_condition"),
+																				path.MatchRelative().AtParent().AtName("exists_condition"),
+																				path.MatchRelative().AtParent().AtName("prefix_condition"),
+																				path.MatchRelative().AtParent().AtName("suffix_condition"),
+																				path.MatchRelative().AtParent().AtName("wildcard_condition"),
+																			}...),
+																		},
+																	},
 																	"anything_but_condition": schema.SingleNestedAttribute{
 																		Computed: true,
 																		Optional: true,
@@ -606,20 +631,6 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 																			}...),
 																		},
 																	},
-																	"str": schema.StringAttribute{
-																		Computed: true,
-																		Optional: true,
-																		Validators: []validator.String{
-																			stringvalidator.ConflictsWith(path.Expressions{
-																				path.MatchRelative().AtParent().AtName("anything_but_condition"),
-																				path.MatchRelative().AtParent().AtName("equals_ignore_case_condition"),
-																				path.MatchRelative().AtParent().AtName("exists_condition"),
-																				path.MatchRelative().AtParent().AtName("prefix_condition"),
-																				path.MatchRelative().AtParent().AtName("suffix_condition"),
-																				path.MatchRelative().AtParent().AtName("wildcard_condition"),
-																			}...),
-																		},
-																	},
 																	"suffix_condition": schema.SingleNestedAttribute{
 																		Computed: true,
 																		Optional: true,
@@ -661,6 +672,9 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 																		},
 																	},
 																},
+																Validators: []validator.Object{
+																	validators.ExactlyOneChild(),
+																},
 															},
 															MarkdownDescription: `Filter on activity type. If not specified, all activities will be matched on execution.` + "\n" +
 																`Example:` + "\n" +
@@ -679,7 +693,8 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 																`          "type": ["DocUploadedFromPortal", "DocRemovedFromPortal"]` + "\n" +
 																`        }` + "\n" +
 																`      }` + "\n" +
-																`    ` + "```" + ``,
+																`    ` + "```" + `` + "\n" +
+																``,
 														},
 													},
 												},
@@ -708,7 +723,8 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 																`        "operation": ["createEntity", "updateEntity"]` + "\n" +
 																`      }` + "\n" +
 																`    }` + "\n" +
-																`  ` + "```" + ``,
+																`  ` + "```" + `` + "\n" +
+																``,
 														},
 														"payload": schema.StringAttribute{
 															Computed:    true,
@@ -752,7 +768,7 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 								"type": schema.StringAttribute{
 									Computed:    true,
 									Optional:    true,
-									Description: `Not Null; must be "entity_operation"`,
+									Description: `Not Null; must be one of ["entity_operation"]`,
 									Validators: []validator.String{
 										speakeasy_stringvalidators.NotNull(),
 										stringvalidator.OneOf(
@@ -873,7 +889,8 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 								`            }` + "\n" +
 								`          }` + "\n" +
 								`        }` + "\n" +
-								`      ` + "```" + ``,
+								`      ` + "```" + `` + "\n" +
+								``,
 							Validators: []validator.Object{
 								objectvalidator.ConflictsWith(path.Expressions{
 									path.MatchRelative().AtParent().AtName("any"),
@@ -910,7 +927,7 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 								"type": schema.StringAttribute{
 									Computed:    true,
 									Optional:    true,
-									Description: `Not Null; must be "frontend_submission"`,
+									Description: `Not Null; must be one of ["frontend_submission"]`,
 									Validators: []validator.String{
 										speakeasy_stringvalidators.NotNull(),
 										stringvalidator.OneOf(
@@ -959,7 +976,7 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 								"type": schema.StringAttribute{
 									Computed:    true,
 									Optional:    true,
-									Description: `Not Null; must be "journey_submission"`,
+									Description: `Not Null; must be one of ["journey_submission"]`,
 									Validators: []validator.String{
 										speakeasy_stringvalidators.NotNull(),
 										stringvalidator.OneOf(
@@ -990,9 +1007,11 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 										"message_type": schema.StringAttribute{
 											Computed:    true,
 											Optional:    true,
-											Description: `must be "RECEIVED"`,
+											Description: `must be one of ["RECEIVED"]`,
 											Validators: []validator.String{
-												stringvalidator.OneOf("RECEIVED"),
+												stringvalidator.OneOf(
+													"RECEIVED",
+												),
 											},
 										},
 									},
@@ -1008,7 +1027,7 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 								"type": schema.StringAttribute{
 									Computed:    true,
 									Optional:    true,
-									Description: `Not Null; must be "received_email"`,
+									Description: `Not Null; must be one of ["received_email"]`,
 									Validators: []validator.String{
 										speakeasy_stringvalidators.NotNull(),
 										stringvalidator.OneOf(
@@ -1028,6 +1047,9 @@ func (r *FlowResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 								}...),
 							},
 						},
+					},
+					Validators: []validator.Object{
+						validators.ExactlyOneChild(),
 					},
 				},
 			},
