# internal/provider/types/disable_details.go
@@ -1,0 +1,10 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package types
+
+import "github.com/hashicorp/terraform-plugin-framework/types"
+
+type DisableDetails struct {
+	DisabledAt types.String `tfsdk:"disabled_at"`
+	DisabledBy types.String `tfsdk:"disabled_by"`
+}
